# Pyclean-CLI

./: .gitignore  README.md  pyproject.toml
demo/testdata/: README.md
demo/testdata/cache/: package.cache  thumbs.db
demo/testdata/temp/: session.tmp
src/pyclean/: __init__.py  cleaner.py  cli.py  models.py  rules.py  scanner.py  utils.py
tests/: test_cleaner.py  test_cli.py  test_scanner.py
