[project]
name = "pyclean"
version = "0.1.0"
description = "Safe junk file scanner and cleaner CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<0.8",
    "mypy>=1.10,<2.0"
]

[project.scripts]
pyclean = "pyclean.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["pyclean"]
